--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
-<div class="grid shadow-bottom">
+<div class="grid top-menu">
     <div class="col-first border-right">Hamburger</div>
     <div class="col"><img src= {{ "/assets/img/logo-blue.svg" | prepend: site.github.url | replace: 'http://', 'https://' }} alt="Welcome" height="40" /></div>
-    <div class="col"></div>
-    <div class="col"></div>
+    <div class="col"><a href= {{ "/trading" | prepend: site.github.url | replace: 'http://', 'https://' }}><span>Trading</span></a></div>
+    <div class="col"><a href= {{ "/portfolio" | prepend: site.github.url | replace: 'http://', 'https://' }}><span>Portfolio</span></a></div>
     <div class="col-last"></div>
 </div>
