added temp hamburger svg

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<div class="grid top-menu">
-    <div class="col-first border-right">Hamburger</div>
-    <div class="col"><img src= {{ "/assets/img/logo-blue.svg" | prepend: site.github.url | replace: 'http://', 'https://' }} alt="Welcome" height="40" /></div>
+<div class="grid-middle top-menu">
+    <div class="col-first border-right"><span class="binary-toggle"></span></div>
+    <div class="col"><span class="binary-nav"></span></div>
     <div class="col"><a href= {{ "/trading" | prepend: site.github.url | replace: 'http://', 'https://' }}><span>Trading</span></a></div>
     <div class="col"><a href= {{ "/portfolio" | prepend: site.github.url | replace: 'http://', 'https://' }}><span>Portfolio</span></a></div>
     <div class="col-last"></div>
