add fluid typography

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,3 +5,4 @@
 @import '../sass/gridlex/gridlex.scss';
 @import '../sass/style.scss';
 @import '../sass/icons.scss';
+@import '../sass/typography.scss';
