--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,9 @@
 ---
 ---
+$baseurl: "{{ site.github.url | replace: 'http://', 'https://' }}";
 @charset "utf-8";
 
-@import '../sass/gridlex/gridlex.scss';
+@import '../sass/material/grid/mdc-layout-grid.scss';
 @import '../sass/style.scss';
 @import '../sass/icons.scss';
 @import '../sass/typography.scss';
