--- a/assets/sass/icons.scss
+++ b/assets/sass/icons.scss
@@ -1,6 +1,6 @@
 .binary-nav {
     display: block;
-    background: url('/assets/img/logo-blue.svg');
+    background: url($baseurl + '/assets/img/logo-blue.svg');
     background-size: 40px 40px;
     width: 40px;
     height: 40px;
@@ -8,7 +8,7 @@
 
 .binary-toggle {
     display: block;
-    background: url('/assets/img/hamburger.svg');
+    background: url($baseurl + '/assets/img/hamburger.svg');
     background-size: 40px 40px;
     width: 40px;
     height: 40px;
