--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,11 @@
-<div class="mdc-layout-grid top-menu">
-    <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell--span-1 border-right"><span class="binary-toggle"></span></div>
-        <div class="mdc-layout-grid__cell--span-1"><span class="binary-nav"></span></div>
-        <div class="mdc-layout-grid__cell--span-1 sm-hidden"><a href= {{ "/trading" | prepend: site.github.url | replace: 'http://', 'https://' }}><span>Trading</span></a></div>
-        <div class="mdc-layout-grid__cell--span-1 sm-hidden"><a href= {{ "/portfolio" | prepend: site.github.url | replace: 'http://', 'https://' }}><span>Portfolio</span></a></div>
-        <div class="mdc-layout-grid__cell--span-1"></div>
+<div class="top-menu">
+    <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell--span-1 border-right"><span class="binary-toggle"></span></div>
+            <div class="mdc-layout-grid__cell--span-1"><span class="binary-nav"></span></div>
+            <div class="mdc-layout-grid__cell--span-1 sm-hidden"><a href= {{ "/trading" | prepend: site.github.url | replace: 'http://', 'https://' }}><span>Trading</span></a></div>
+            <div class="mdc-layout-grid__cell--span-1 sm-hidden"><a href= {{ "/portfolio" | prepend: site.github.url | replace: 'http://', 'https://' }}><span>Portfolio</span></a></div>
+            <div class="mdc-layout-grid__cell--span-1"></div>
+        </div>
     </div>
 </div>
