--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,5 +15,8 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.github.url | replace: 'http://', 'https://' }}">
+  <link rel="stylesheet" href="{{ "/assets/external/material-components-web.min.css" | prepend: site.github.url | replace: 'http://', 'https://' }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+  <script src="/assets/external/material-components-web.min.js"></script>
+  <script>mdc.autoInit()</script>
 </head>
