--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,6 @@
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.github.url | replace: 'http://', 'https://' }}">
   <link rel="stylesheet" href="{{ "/assets/external/material-components-web.min.css" | prepend: site.github.url | replace: 'http://', 'https://' }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-  <script src="/assets/external/material-components-web.min.js"></script>
+  <script src="{{ "/assets/external/material-components-web.min.js" | prepend: site.github.url | replace: 'http://', 'https://' }}"></script>
   <script>mdc.autoInit()</script>
 </head>
