--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="{{ site.lang | default: page.lang | default: 'en' }}">
   {% include head.html %}
-  <body>
+  <body class="mdc-typography">
     {% include header.html %}
     <div class="mdc-layout-grid">
         {{ content }}
