--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 
 header {
@@ -17,14 +18,51 @@ h1 {
     text-align: center;
 }
 
-.top-menu {
-    box-shadow: 0px 15px 10px -15px #b0b0b0;
+.border-right {
+    border-right: 1px solid rgba(0,0,0,.2);
+}
 
-    a {
-        text-decoration: none;
+.border-left {
+    border-left: 1px solid rgba(0,0,0,.2);
+}
+
+.btn {
+    padding: 50px 0;
+    text-align: center;
+
+    &.small {
+        padding: 40px 0;
+    }
+    &.big {
+        padding: 100px 0;
     }
 }
 
-.border-right {
-    border-right: 1px solid #b0b0b0;
+.menu-tab {
+    align-self: center;
+
+    a {
+        min-width: 60px;
+
+        span {
+            font-size: 0.8rem;
+            text-transform: capitalize;
+        }
+    }
+}
+
+.menu-toolbar {
+    background-color: #ffffff;
+
+    a {
+        align-self: center;
+        text-decoration: none;
+        span {
+            color: #2A3052;
+        }
+    }
+}
+
+.menu-toggle {
+    border-right: 1px solid rgba(0,0,0,.2);
 }
