hide menu links in tablet/mobile

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -49,6 +49,9 @@ h1 {
             text-transform: capitalize;
         }
     }
+    @media (max-width: 768px) {
+        display: none;
+    }
 }
 
 .menu-toolbar {
